SPAD-FCS notebook changed

--- a/Examples/SPAD-FCS_analysis_example/FCS_Alexa488AB_example.ipynb
+++ b/Examples/SPAD-FCS_analysis_example/FCS_Alexa488AB_example.ipynb
@@ -14,14 +14,16 @@
     "Files and folders needed:\n",
     "* **\"05_Alexa488AB_20ugmL_P60percP_SPAD.bin\"**: contains the raw data\n",
     "* **\"05_Alexa488AB_20ugmL_P60percP_SPAD_info.txt\"**: contains the metadata\n",
-    "* **\"05_Alexa488AB_20ugmL_P60percP_SPAD_xcorrs/**: folder with 625 .csv files containing the 25x25 cross-correlations. The cross-correlations can be calculated from the .bin file as well, but this will take several hours"
+    "* **\"05_Alexa488AB_20ugmL_P60percP_SPAD_xcorrs/**: folder with 625 .csv files containing the 25x25 cross-correlations. The cross-correlations can be calculated from the .bin file as well, but this will take several hours\n",
+    "\n",
+    "All data can be found [here](https://doi.org/10.5281/zenodo.4161418)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## import modules"
+    "## Import modules"
    ]
   },
   {
@@ -45,7 +47,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## open data and calculate correlations\n",
+    "## Open data and calculate correlations\n",
     "The .bin file is opened, divided in chunks of 10 s each (20 chunks in total), the correlations for each chunk are calculated, and then averaged.\n",
     "\n",
     "Possible values for listOfCorrelations:\n",
@@ -1697,7 +1699,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.7"
   }
  },
  "nbformat": 4,
